# HerbiV

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  TODO.md  analysis.py  demo.ipynb  herbiv-cli.py  output.py  pyproject.toml  requirements.txt  run.py  setup.py  test.ipynb
herbiv/: analysis.py  compute.py  get.py  output.py
herbiv/data/: HerbiV_chemicals.csv  HerbiV_formula.csv  HerbiV_formula_tcm_links.csv  HerbiV_proteins.csv
herbiv/result/: Graph.html
script/: run.py  test.py  utils.py
src/herbiv/: analysis.py  compute.py  get.py  output.py
src/herbiv/data/: HerbiV_proteins.csv  HerbiV_tcm.csv  HerbiV_tcm_chemical_links.csv
src/pharmastar/: analysis.py  chemical.py  chemical_herb.py  chemical_protein.py  output.py  tcm.py  tcm_chemical.py
