[build-system]
requires = [
    "hatchling",
    "numpy",
    "pandas",
    "tqdm",
    "pyecharts",
    "typing-extensions",
]
build-backend = "hatchling.build"

[project]
name = "herbiv"
version = "0.1a6"
authors = [
  { name="王皓阳", email="Wesady@qq.com" },
]
description = "HerbiV是一个具有多种功能的中药网络药理学分析工具，可进行经典的网络药理学及反向网络药理学分析。HerbiV is a multi-functional traditional chinese medicine network pharmacology analysis tool for classical network pharmacology and reverse network pharmacology."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.urls]
"Homepage" = "https://github.com/MLi-lab-Bioinformatics-NJUCM/pharmastar"
"Bug Tracker" = "https://github.com/MLi-lab-Bioinformatics-NJUCM/pharmastar/issues"